fixed spacing

--- a/styles.css
+++ b/styles.css
@@ -47,7 +47,6 @@ body{
     border-radius: 10px;
     width: 40%;
     opacity: 0.9;
-    padding: 5px;
 }
     
 h3{
